css/main.css
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;    
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio,
canvas,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browse Happy prompt
   ========================================================================== */

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

/* ==========================================================================
   Navigation bar
   ========================================================================== */
.nav {
    padding-top: 14px;
}

.nav-list {
    padding-top: 8px;
    padding-right: 60px;
}

.nav-list > li {
    display: inline-block;
}

.nav-list > li > a {
    text-decoration: none;
    font-size: 18px;
    color: #eee;
}
.nav-list > li > a:hover {
    color: #fff;
}
.nav a {
    color: #fff;
    font-size: 16px;
    font-weight: bold;
    padding: 14px 10px;
    text-transform: uppercase;
}

/* ==========================================================================
   Splash Page
   ========================================================================== */
html, body {
    height: 100%;
    /*font-family: 'Helvetica Neue', Helvetica, sans-serif;*/
    font-family: 'Playfair Display', serif;
}
.fullscreen {
    width: 100%;
    height: 100%;
    background-color: #f7f7f7;    
}
.jumbotron {
    background: url('../img/shutterstock_133672814.jpg') no-repeat center top;
    background-size: 100% auto;
    -webkit-background-size: 100% auto;
    -moz-background-size: 100% auto;
    -o-background-size: 100% auto;
    height: 80%;
    opacity: 0.9;
    margin-bottom: 0;
}
.jumbotron p {
    color: #fff;
    font-size: 20px;
    text-align: center;
}
.jumbotron .punchline {
    color: #fff;
    font-size: 48px;
    font-weight: bold;
    /*font-family: 'Shift', sans-serif;*/
    font-family: inherit;
    text-align: center;
    padding-top: 4em;
}

.app {
    height: 20%;
    width: 100%;
    font-family: inherit;
}
.cta {
    text-align: center;
}

.portfolio, .ph-team, .package {
    background-color: #f7f7f7;
}

.portfolio h3, .ph-team h3, .package h3, .press h3 {
    font-family: inherit;
    font-weight: bold;
    color: #393c3d;
    font-size: 24px;
    text-align: center;
    padding-top: 30px;
    padding-bottom: 30px;
}

.portfolio {
    background-color: #f8f9fb;
    padding: 2em 0;
}

.portfolio p {
    text-align: center;
    padding-top: 2em;
    text-transform: uppercase;
    font-weight: 500;
}

.ph-team {
    background-color: #fff;
    text-align: center;
    padding: 0.5em 0 2em;
}

.ph-team img {
    padding-bottom: 15px;
}

.package {    
    padding-bottom: 50px;
}

.package p {
    text-align: center;
}

.press {
    background-color: #efefef;
}

.press h4 {
    padding-top: 6px;
    font-weight: 300;
}

.press img {
    padding: 15px 20px;
}
a {
    color: #00b0ff;
}

.nav li {
    display: inline;
}

.event_input {
    padding-top: 120px;
    text-align: center;
}

.app p {
    text-align: center;
}

.footer {
    color: #fff;    
    background-color: #77b029;
    text-align: center;
}

.footer-section {
    padding-top: 3em;
}

.footer strong {
    font-size: 14px;
    text-transform: uppercase;
    font-weight: 600;

}

.footer a {
    color: #eee;
    padding: 30px 0;
    text-decoration: none;
}

.footer li {
    display: block;
    text-align: center;
    padding-bottom: 8px;
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 300;
}

.footer ul {
    padding-top: 15px;
    padding-right: 40px;
}

.copyright {
    background-color: #669900;
    color: #eee;
    padding-top: 25px;
    padding-bottom: 25px;

}

.modal-footer a {
    color: #fff;
    text-transform: uppercase;
    text-decoration: none;
}

.modal-footer {
    text-align: center;
}

.modal-footer button {
    margin-left: auto;
    margin-right: auto;
}

.check-date, .order {
    background-color: #669900;
    border: 0;
}

.downloads {
    padding: 3em 0;
    color: #000;
}
.downloads a{
    color: #000;
    text-decoration: none;
    font-size: inherit;
}
.downloads a:hover {
    color: #000;
}
.downloads h3 {
    font-weight: 500;
    font-size: 28px;
}
.downloads p {
    font-size: 16px;
}
.app-store img{
    margin-left: -1em;
}

.direction-right {
    padding: 5em 0;
}
.direction-right a {
    color: #545454;
}
.direction-right a:hover {
    color: #000;
}

.glyphicon-chevron-right {
    font-size: 3em;
}

.stack img {
    max-width: 90%;
}
/* ==========================================================================
   Parallax
   ========================================================================== */
.parallax {
    background: linear-gradient(rgba(238, 238, 238, 0.8), rgba(238, 238, 238, 0.8)), url(../img/eversnap_magazine_article.png) 50% 0;
    background-attachment: fixed;
    margin: 0 auto;
    width: 100%;
    position: relative;
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
}

/* ==========================================================================
   fancybox
   ========================================================================== */
.fancybox-slides {
    display: none;
}

/* ==========================================================================
   Photographers
   ========================================================================== */

.figure-caption-title {
    color: #1c1c1c;
    font-weight: 500;
    text-transform: none;
    text-align: center;
    padding-top: 0;
}
.figure-caption-title span {
    font-weight: 200;
    text-align: left;
    font-size: 16px;
}

